kustomize/overlays/prod/deployment-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cairn
spec:
  replicas: 3
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: cairn
